OSSM/1_32/must-gather.local.7013786599205061846/registry-redhat-io-openshift-serverless-1-svls-must-gather-rhel8-sha256-9b7d97cc846f3696675d139e61011364fff4a62e700cb54be77f443b8d49d7cc/user-ns/ingresses.networking.internal.knative.dev/get.yaml
apiVersion: v1
items:
- apiVersion: networking.internal.knative.dev/v1alpha1
  kind: Ingress
  metadata:
    annotations:
      networking.internal.knative.dev/rollout: '{"configurations":[{"configurationName":"helloworld-go","percent":100,"revisions":[{"revisionName":"helloworld-go-00001","percent":100}],"stepParams":{}}]}'
      networking.knative.dev/ingress.class: istio.ingress.networking.knative.dev
      serving.knative.dev/creator: system:admin
      serving.knative.dev/lastModifier: system:admin
      serving.knative.openshift.io/enablePassthrough: "true"
    creationTimestamp: "2024-06-05T10:59:19Z"
    finalizers:
    - ingresses.networking.internal.knative.dev
    - ocp-ingress
    generation: 1
    labels:
      serving.knative.dev/route: helloworld-go
      serving.knative.dev/routeNamespace: user-ns
      serving.knative.dev/service: helloworld-go
    name: helloworld-go
    namespace: user-ns
    ownerReferences:
    - apiVersion: serving.knative.dev/v1
      blockOwnerDeletion: true
      controller: true
      kind: Route
      name: helloworld-go
      uid: b11e4c8e-b322-4022-a8b8-00e0ad27c3e9
    resourceVersion: "44054"
    uid: acbd3525-dae1-4f5f-b979-0093b802b28b
  spec:
    httpOption: Enabled
    rules:
    - hosts:
      - helloworld-go.user-ns
      - helloworld-go.user-ns.svc
      - helloworld-go.user-ns.svc.cluster.local
      http:
        paths:
        - splits:
          - appendHeaders:
              Knative-Serving-Namespace: user-ns
              Knative-Serving-Revision: helloworld-go-00001
            percent: 100
            serviceName: helloworld-go-00001
            serviceNamespace: user-ns
            servicePort: 80
      visibility: ClusterLocal
    - hosts:
      - helloworld-go-user-ns.apps.ci-ln-bxslict-76ef8.origin-ci-int-aws.dev.rhcloud.com
      http:
        paths:
        - splits:
          - appendHeaders:
              Knative-Serving-Namespace: user-ns
              Knative-Serving-Revision: helloworld-go-00001
            percent: 100
            serviceName: helloworld-go-00001
            serviceNamespace: user-ns
            servicePort: 80
      visibility: ExternalIP
  status:
    conditions:
    - lastTransitionTime: "2024-06-05T10:59:20Z"
      status: "True"
      type: LoadBalancerReady
    - lastTransitionTime: "2024-06-05T10:59:19Z"
      status: "True"
      type: NetworkConfigured
    - lastTransitionTime: "2024-06-05T10:59:20Z"
      status: "True"
      type: Ready
    observedGeneration: 1
    privateLoadBalancer:
      ingress:
      - domainInternal: knative-local-gateway.istio-system.svc.cluster.local
    publicLoadBalancer:
      ingress:
      - domainInternal: istio-ingressgateway.istio-system.svc.cluster.local
kind: List
metadata:
  resourceVersion: ""
